# oss-model-extraction-evals

./: .gitignore  README.md  bootstrap_dataset.py  format.py  pyproject.toml  run_evals.py  test.py
dataset/: email_0.eml  email_107.eml  email_128.eml  email_129.eml  email_13.eml  email_138.eml  email_146.eml  email_18.eml  email_27.eml  email_3.eml  email_30.eml  email_32.eml  email_34.eml  email_40.eml  email_51.eml  email_6.eml  email_72.eml  email_81.eml  email_84.eml  email_9.eml  email_98.eml
formatted/: email_1.eml  email_106.eml  email_14.eml  email_140.eml  email_141.eml  email_147.eml  email_148.eml  email_15.eml  email_16.eml  email_17.eml  email_2.eml  email_20.eml  email_21.eml  email_23.eml  email_24.eml  email_25.eml  email_31.eml  email_4.eml  email_44.eml  email_7.eml  email_76.eml
