[tool.poetry]
name = "oss-model-extraction-evals"
version = "0.1.0"
description = ""
authors = ["jacoblee93 <jacoblee93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
html2text = "^2020.1.16"
langchain = "^0.1.9"
langsmith = "^0.1.10"
openai = "^1.3.3"
tiktoken = "^0.5.1"
anthropic = "^0.7.2"
langchain-mistralai = "^0.0.5"
langchain-openai = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
